# varia

./: Cargo.toml  README.md
lib/bsdiff/: Cargo.toml  README.md
lib/bsdiff/src/: lib.rs
src/: lib.rs
